--- a/css/consistent.css
+++ b/css/consistent.css
@@ -1,3 +1,52 @@
+/*Navigation*/
+header{
+    background-color: rgb(138, 150, 161);
+    padding-bottom: 20px;
+}
+
+/*Scroll*/
+
+/*Main for webpages: design, theory, about the API, data viz*/
+
+.grid-display{
+    background-color: rgb(209, 209, 209);
+    padding-top: 50px;
+    padding-bottom: 50px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    align-items: center;
+}
+
+
+h1, .p-1{
+    padding-left: 110px;/*74+16+20*/
+}
+
+
+.img-1{
+    grid-row: 1/2;
+    grid-column: 2;
+    background-color: aliceblue;
+    margin-top: 70px;
+    margin-left: 50px;
+    margin-right: 150px;
+    height: 100px;
+}
+
+
+/*Table of contents*/
+
+.table-of-contents{
+    text-align: left;
+    padding-left: 110px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+
+/*Footer for all webpages*/
+
 footer{
     background-color: beige;
     display: grid;
