--- a/css/consistent.css
+++ b/css/consistent.css
@@ -13,8 +13,9 @@ header{
     padding-top: 50px;
     padding-bottom: 50px;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 0fr);
+    gap: 20px;
+    grid-template-rows: repeat(2, 0fr);
     align-items: center;
 }
 
@@ -23,15 +24,19 @@ h1, .p-1{
     padding-left: 110px;/*74+16+20*/
 }
 
+.p-1{
+    width: 500px;
+}
 
 .img-1{
-    grid-row: 1/2;
+    grid-row: 1/3;
     grid-column: 2;
     background-color: aliceblue;
     margin-top: 70px;
-    margin-left: 50px;
+    margin-left: 350px;
     margin-right: 150px;
-    height: 100px;
+    height: 200px;
+    width: 250px;
 }
 
 
