--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,14 +1,39 @@
+@font-face {
+    font-family: 'firstFont';
+    src: url(/Exam-Commercial-Website/Inter/static/Inter_18pt-Regular.ttf);
+}
+
+html{
+    font-family: 'firstFont', 'Gill Sans MT', Calibri;
+}
+
+h1, h2, h3, h4{
+    font-weight: lighter;
+}
+
+h1{
+    color: #173387;
+    padding-bottom: 20px;
+}
 
 .main-one{
-    background-color: rgb(220, 220, 220);
+    background-color: #fffcf6;
     text-align: center;
-    padding-top: 100px;
-    padding-bottom: 50px;
+    padding-top: 150px;
+    padding-bottom: 100px;
+}
+
+.main-two{
+    background-color: #ccdde8;
+    padding-top: 10px;
 }
 
 .main-two-para{
-    padding-top: 20px;
+    margin-top: 100px;
+    margin-left: 300px;
+    margin-right: 300px;
     text-align: center;
+    font-size: 19px;
 }
 
 .main-two-display{
@@ -21,12 +46,39 @@
     padding-bottom: 50px;
 }
 
+.main-two-display img{
+    width: 250px;
+    height: 180px;
+}
+
+.main-two-display p{
+    margin-top: 70px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 40px;
+}
+
+.main-two-display button{
+    width: 170px;
+    height: 35px;
+    background-color: #178fd6;
+    color: #edece8;
+    border-radius: 3px;
+    border: #178fd6;
+}
+
+.main-two-display button:hover{
+    background-color: #edece8;
+    color: #178fd6;
+}
+
+
 .main-two-block1, .main-two-block2, .main-two-block3 {
     text-align: center;
     margin-top: 50px;
-    height: 300px;
+    height: 450px;
     width: 270px;
-    background-color: rgb(214, 232, 232);
+    background-color: rgb(255, 255, 255);
     border-radius: 7px;
     padding: 20px; 
 
@@ -34,26 +86,34 @@
 
 .main-three{
     text-align: center;
-    background-color: aliceblue;
     padding-top: 20px;
     padding-bottom: 50px;
 }
 
+.main-three img{
+    padding-top: 75px;
+    height: 450px;
+    width: 676px;
+    padding-bottom: 75px;
+}
+
+.main-three h2{
+    color: #173387;
+}
+
 .main-four{
-    padding-left: 422px;
-    padding-right: 422px;
+    padding-left: 402px;
+    padding-right: 402px;
+}
+
+.main-four h3{
+    color: #173387;
+    text-align: center;
 }
 
 .main-four-block1 , .main-four-block2, .main-four-block3 {
     margin-top: 40px;
-    padding: 20px;
-   /* padding-top: 10px;
-    padding-left: 30px;*/
-    background-color: rgb(185, 185, 185);
-   /* height: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;*/
+    padding: 20px; 
     border-radius: 10px;
 }
 
@@ -70,6 +130,12 @@
     flex-direction: row-reverse;
 }
 
+.main-four-block3{
+    background-color: #ccdde8;
+    text-align: center;
+    
+}
+
 .flex-container{
     display: flex;
     align-items: center;
@@ -81,30 +147,31 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+    background-color: #ccdde8;
+    border-radius: 5px;
+  
 }
 
+
 .main-four-block1-icon{
-    width: 212px;
-    height: 212px;
+    width: 346px;
+    height: 225px;
 }
 
 .main-four-block2-icon{
-    width: 215px;
-    height: 210px;
+    width: 155px;
+    height: 220px;
 }
 
-.icon-one, .icon-two{
-    position: absolute;
-    width: 212px;
-    height: 212px;
-}
-.icon-one{
-    left: 20px;
+.main-four button{
+    border: none;
+    background-color: #ccdde8;
+    color: #3b4144;
 }
 
-.icon-two{
-    right: 30px;
+.main-four button:hover{
+    color: #178fd6;
 }
-
-
-/*  512  */
