--- a/css/design.css
+++ b/css/design.css
@@ -1,13 +1,25 @@
+@font-face {
+    font-family: 'firstFont';
+    src: url(/Exam-Commercial-Website/Inter/static/Inter_18pt-Regular.ttf);
+}
 
+html{
+    font-family: 'firstFont', 'Gill Sans MT', Calibri;
+}
+
+h1, h2, h3{
+    font-weight: lighter;
+}
 
 .content-one, .content-two{
     padding-left: 110px;
     padding: 80px;
 }  
 
-.content-one{
-    background-color: rgb(226, 218, 205);
+a{
+    color: #173387;
 }
+
 
 
 
