styling and theory

--- a/css/theory.css
+++ b/css/theory.css
@@ -1,17 +1,23 @@
 
-.content-one, .content-two, .content-three{
+@font-face {
+    font-family: 'firstFont';
+    src: url(/Exam-Commercial-Website/Inter/static/Inter_18pt-Regular.ttf);
+}
+
+html{
+    font-family: 'firstFont', 'Gill Sans MT', Calibri;
+}
+
+h1, h2, h3{
+    font-weight: lighter;
+}
+
+a, h3{
+    color: #173387;
+}
+
+.content-one, .content-two, .content-three {
     padding-left: 110px;
     padding: 80px;
 }  
 
-.content-one{
-    background-color: rgb(176, 176, 157);
-}
-
-.content-two{
-    background-color: rgb(228, 228, 218);
-}
-
-.content-three{
-    background-color: rgb(233, 233, 233);
-}
