--- a/css/about.css
+++ b/css/about.css
@@ -1,11 +1,24 @@
+@font-face {
+    font-family: 'firstFont';
+    src: url(/Exam-Commercial-Website/Inter/static/Inter_18pt-Regular.ttf);
+}
+
+html{
+    font-family: 'firstFont', 'Gill Sans MT', Calibri;
+}
+
+h1, h2, h3, h4{
+    font-weight: lighter;
+}
+
 .content-one, .content-two{
     padding-left: 110px;
     padding: 80px;
 }  
 
-
-.content-one{
-    background-color: aliceblue;
+.content-two{
+    text-align: center;
+    background-color: #fffcf6;
 }
 
 .api-grid{
@@ -18,6 +31,11 @@
     padding-bottom: 50px;
 }
 
+.content-two h3{
+    
+    color: #173387;
+}
+
 .api-grid-one, .api-grid-two, .api-grid-three{
     text-align: center;
     margin-top: 50px;
@@ -26,4 +44,5 @@
     background-color: rgb(214, 232, 232);
     border-radius: 7px;
     padding: 20px; 
+    padding-bottom: 50px;
 }
