--- a/css/consistent.css
+++ b/css/consistent.css
@@ -1,6 +1,6 @@
 /*Navigation*/
 header nav{
-    background-color: rgb(138, 150, 161);
+    background-color: #edece8;
     padding-bottom: 20px;
     display: flex;
     gap: 10px;
@@ -8,6 +8,7 @@ header nav{
 
 nav img {
     padding-left: 75px;
+    width: 130px;
 }
 
 nav{
@@ -23,8 +24,8 @@ nav{
 .dropdown button{
     width: 100px;
     border: none;
-    background-color: rgb(138, 150, 161);
-    color: aliceblue;
+    background-color: #edece8;
+    color: #178fd6;
 }
 
 .dropdown:hover button{
@@ -39,21 +40,29 @@ nav{
     display: none;
     position: absolute;
     top: 100%;
-    background-color: azure;
+    background-color: #edece8;
     padding: 10px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+
 }
 
 .nav-content button{
     height: 70px;
+    font-size: 14px;
 }
 
 .nav-content button:hover{
-    color: rgb(127, 214, 255);
+    color:#173387;
     cursor: pointer;
 }
 
+#hm-nav-btn{
+    border: none;
+    background-color: #edece8;
+}
 
+#hm-nav-btn:hover{
+    cursor: pointer;
+}
 
 /*Scroll*/
 
@@ -77,7 +86,7 @@ nav{
     padding-top: 50px;
     padding-bottom: 50px;
     display: grid;
-    grid-template-columns: repeat(2, 0fr);
+
     gap: 20px;
     grid-template-rows: repeat(2, 0fr);
     align-items: center;
@@ -85,23 +94,16 @@ nav{
 
 
 .h1-all, .p-1{
-    padding-left: 110px;/*74+16+20*/
+    padding-left: 110px;
+    grid-row: 1;
 }
 
 .p-1{
     width: 500px;
+    grid-row: 2;
 }
 
-.img-1{
-    grid-row: 1/3;
-    grid-column: 2;
-    background-color: aliceblue;
-    margin-top: 70px;
-    margin-left: 350px;
-    margin-right: 150px;
-    height: 200px;
-    width: 250px;
-}
+
 
 
 /*Table of contents*/
@@ -113,11 +115,15 @@ nav{
     margin-bottom: 40px;
 }
 
+.table-of-contents a{
+    color: #173387;
+}
 
 /*Footer for all webpages*/
 
 footer{
-    background-color: beige;
+    background-color: #173387;
+    color: white;
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(2,1fr);
@@ -149,4 +155,8 @@ footer{
     grid-row: 2;
     grid-column: 2;
     text-align: center;
+}
+
+a{
+    color: #edece8;
 }
