--- a/css/data viz.css
+++ b/css/data viz.css
@@ -1,9 +1,22 @@
-body{
-    background-color: rgb(192, 202, 202);
+@font-face {
+    font-family: 'firstFont';
+    src: url(/Exam-Commercial-Website/Inter/static/Inter_18pt-Regular.ttf);
+}
+
+html{
+    font-family: 'firstFont', 'Gill Sans MT', Calibri;
+}
+
+h1, h2, h3{
+    font-weight: lighter;
+}
+
+.bar-graph-container h2{
+    margin-left: 50px;
 }
 
 .currency-dropdown{
-    margin-top: 20px;
+    margin-top: 70px;
     margin-bottom: 20px;
     margin-left: 500px;
 }
@@ -44,4 +57,38 @@ body{
 
 #chart{
     margin-left: 450px;
+}
+
+.line-graph-container {
+    margin-left: 50px;
+}
+
+#loading-message{
+    display: none;
+}
+
+.spinner {
+    border: 4px solid #f3f3f3; /* Light grey */
+    border-top: 4px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+#tooltip-two{
+    position: absolute; 
+    display: none;
+    background-color: rgba(0, 0, 0, 0.7); 
+    color: white; 
+    padding: 5px; 
+    border-radius: 5px;
+    pointer-events: none;
+    z-index: 10;
+    white-space: nowrap;
 }
